--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: "Roboto", sans-serif;
+}
+
+nav {
+    margin-bottom: 30px;
 }
 
 #logo_img {
@@ -23,23 +28,22 @@ body {
 }
 
 #hero_img {
-    max-height: 60vh;
-    max-width: 60vw;
-    margin: 3vh 0 0 10vw;
+    /* max-height: 40%; */
+    max-width: 80%;
+    float: right;
 }
 
 #hero_section {
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
-#hero_img_container,
-#hero_text_container {
-    display: inline-block;
-}
 
 #hero_text_container {
     margin-left: 80px;
+    margin-right: 20px;
+    max-height: fit-content;
 }
 
 
@@ -52,12 +56,12 @@ body {
 }
 
 #main_text {
-    font-size: 5vw;
+    font-size: 6rem;
     margin-bottom: 5px;
 }
 
 #sub_text {
-    max-width: 30vw;
+    max-width: 40rem;
     margin-bottom: 15px;
 }
 
@@ -80,24 +84,23 @@ body {
     column-gap: 50px;
 }
 
-#icon {
+.icon {
     display: flex;
-    align-items: center;
+    max-width: 15rem;
     padding: 10px;
-    max-width: 18vw;
 }
 
-#icon:hover {
+.icon:hover {
     box-shadow: 1px 1px 3px rgb(182, 180, 180);
     border-radius: 5px;
 }
 
-#icon p {
+.icon p {
     font-size: 14px;
     opacity: 0.5;
 }
 
-#icon img {
+.icon img {
     height: 60px;
     width: 70px;
     margin-right: 10px;
@@ -123,21 +126,25 @@ hr {
 #grid {
     display: grid;
     max-width: fit-content;
-    max-height: min-content;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-template-areas:
         "img1 img1 img2 img3"
         "img1 img1 img2 img7"
         "img4 img5 img6 img7";
-    gap: 15px;
+    gap: 10px;
     margin: 25px auto;
+}
+
+#grid img {
+    margin: 0;
+    padding: 0;
 }
 
 #grid img:hover {
     opacity: 0.9;
-    transform: scale(1.1, 1.1);
-    transition: 10ms;
+    transform: scale(1.05, 1.05);
+    transition: 100ms;
 }
 
 
@@ -145,9 +152,6 @@ hr {
     grid-area: img1;
 }
 
-#img1 img {
-    width: 575px;
-}
 
 #img2 {
     grid-area: img2;
@@ -173,12 +177,9 @@ hr {
     grid-area: img7;
 }
 
-#img7 img {
-    height: 575px;
-}
 
 footer {
-    width: 100vw;
+    width: 100%;
     background-color: #fff0db;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr;
@@ -222,4 +223,43 @@ footer input:hover {
 
 footer .logo {
     margin-left: 30px;
+}
+
+
+@media screen and (max-width: 1230px) {
+    #main_text {
+        font-size: 5rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    #main_text {
+        font-size: 4rem;
+    }
+
+    #hero_section_icons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .icon {
+        max-width: fit-content;
+        font-size: 30px;
+        margin-bottom: 20px;
+        color: #474747;
+    }
+
+    .icon p {
+        font-size: 20px;
+    }
+
+    .icon img {
+        margin-right: 30px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #main_text {
+        font-size: 3rem;
+    }
 }
